IFX lora gateway certs; fix permissions table overflow

--- a/src/app/modules/admin/permissions/permissions-list/permissions-list.component.css
+++ b/src/app/modules/admin/permissions/permissions-list/permissions-list.component.css
@@ -135,3 +135,6 @@ td.mat-mdc-footer-cell {
     padding-bottom: 10px;
 }
 
+.mat-mdc-card-content>:last-child:not(.mat-mdc-card-footer) {
+    margin-bottom: 64px;
+}
